--- a/index.html
+++ b/index.html
@@ -15,8 +15,14 @@
 </head>
 
 <body>
-    <h1>Welcome To</h1>
-    <h1><span class="text-color">Abu Bakar</span>  World!</h1>
+    <div class="container">
+        <h1>Welcome To</h1>
+    <h1><span class="orange-color">Abu Bakar</span>  World!</h1>
+    <h3>Build Climber and Train Stopper</h3>
+    <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+    <img src="images/bakar-bg.png" alt="My picture">
+    </div>
+    
 
 </body>
 
