--- a/index.html
+++ b/index.html
@@ -15,17 +15,23 @@
 </head>
 
 <body>
-    <div class="container">
-        <h1>Welcome To</h1>
-        <h1><span class="orange-color">Abu Bakar</span> World!</h1>
-        <h3>Build Climber and Train Stopper</h3>
-        <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work.
-            That's why I am learning and mastering web development. I will not stop until I become the Web Development
-            Hero.</p>
-        <img src="images/bakar-bg.png" alt="My picture">
-    </div>
+    <section>
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1> <span class="orange-color">Abu Bakar</span> World!</h1>
+            <h3>Build Climber and Train Stopper</h3>
+            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
+                work.
+                That's why I am learning and mastering web development. I will not stop until I become the Web
+                Development
+                Hero.</p>
+            <a class="link-button" href="https://www.linkedin.com/in/abu-bakar-49936a1a1/" target="_blank">HIRE ME</a>
+        </div>
 
-
+        <div class="half-width">
+            <img src="images/bakar-bg.png" alt="My picture">
+        </div>
+    </section>
 </body>
 
 </html>
